--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,17 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  background-color: #92A8D1;
+  background-color: black;
+}
+
+.article_title{
+  font-size: 40px;
+  font-weight: 900;
 }
 
 h1{
@@ -10,16 +19,22 @@ h1{
 }
 
 .articles_list{
+  display: block;
+  margin-left: 45em;
+  margin-right: 45em; 
   list-style-type: none;
   text-align: center;
 }
 
 .article_img{
-  height: 200px;
-  width: 200px
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .article_list_item{
+  margin-top: 20px;
+  margin-bottom:20px;
   font-weight: 900;
 }
 
@@ -60,4 +75,4 @@ h1{
 #user_button{
   height:40px;
   width: 200px;
-}
+} 
