--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,11 @@
 // Import all of Bootstrap's CSS
 @import "bootstrap/scss/bootstrap";
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
+
+
+body{
+    background-color: lightblue;
+}
 
 
 .ml-inline-5 {
@@ -17,4 +23,27 @@
 .mr-0{
     margin-left:auto;
     margin-inline-end: 5%;
+}
+
+.px-16 {
+    padding-left: ($spacer * 4) !important;
+    padding-right: ($spacer * 4) !important;
+  }
+
+.py-4{
+    padding-top: ($spacer *1.5);
+    padding-bottom: ($spacer *1.5);
+}
+
+@media screen and (min-width: 700px){
+    .w-md{
+        width: 50%;
+    }
+}
+
+
+@media screen and (max-width: 700px){
+    .w-md{
+     width: 100%;
+    }
 }
