--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -25,6 +25,15 @@ body{
     margin-inline-end: 5%;
 }
 
+.mr-20{
+    margin-right: ($spacer * 8);
+
+}
+
+.ml-4{
+    margin-left: ($spacer * 1.5) !important;
+}
+
 .px-16 {
     padding-left: ($spacer * 4) !important;
     padding-right: ($spacer * 4) !important;
@@ -46,4 +55,12 @@ body{
     .w-md{
      width: 100%;
     }
+}
+
+.bg-blue{
+    background-color: #183c67;
+}
+
+.bg-light-blue{
+    background-color: lightblue;
 }
