--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,16 +3,35 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
 
 
-body{
-    background-color: lightblue;
-}
-
-
 
 a{
     text-decoration: none;
-    color:black;
+    color: black;
 }
+
+.oswald-font {
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 20px;
+    font-style: normal;
+    
+  }
+
+.raleway-font {
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 20px;
+    font-style: normal;
+  }
+
+
+body { 
+    background: url(https://images.pexels.com/photos/4792089/pexels-photo-4792089.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
 
 .sort-selection{
     padding-left: ($spacer * .5);
