--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,6 +9,12 @@ a{
     color: black;
 }
 
+.header-links{
+    @media screen and (min-width:992px) {
+        margin-right: ($spacer);
+    }
+}
+
 .oswald-font {
     font-family: "Oswald", sans-serif;
     font-optical-sizing: auto;
@@ -40,6 +46,19 @@ body {
     }
 }
 
+.home-title{
+    @media screen and (min-width: 992px){
+        font-size: 8rem;
+    }
+    font-size: 4rem;
+}
+
+.home-slogan{
+    @media screen and (min-width: 992px){
+    font-size: 2rem;
+    }
+    font-size: 1rem;
+}
 
 .topic-selection{
     padding-left: ($spacer *.5);
