--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -93,6 +93,16 @@ body {
     }
 }
 
+.page_logo{
+    @media screen and (min-width: 576px){
+      width: 100px;
+    }
+    margin: 20px;
+    width: 50px;
+    display:inline-block;
+    height: 100px;
+  }
+
 .responsive-login{
     @media screen and (min-width: 992px){
         display:none;
