made responsive navbar offcanvas

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -37,6 +37,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    max-height: 100%;
   }
 
 .sort-selection{
