--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -23,6 +23,12 @@ a{
     
   }
 
+  .comment-body{
+    @media screen and (max-width:992px) {
+        font-size: 0.5rem;
+    }
+  }
+
 .raleway-font {
     font-family: "Raleway", sans-serif;
     font-optical-sizing: auto;
